# decisionrulespy

./: .gitignore  LICENSE  README.md  setup.cfg
src/decisionrules/: __init__.py  custom_domain.py  decisionrules.py  dr_management.py  enums.py  exceptions.py
src/decisionrulespy/: decisionrules.py
