[metadata]
name = decisionrulespy
version = 2.0.0
author = DecisionRules
author_email = sales@decisionrules.io
description = A simple library for simple connecting to DecisionRules API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/decisionrules/decisionrulespy
project_urls =
    Bug Tracker = https://github.com/decisionrules/decisionrulespy/issues
    Docs = https://docs.decisionrules.io/docs/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
